[package]
name = "wstest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustronomy-fits = "0.2"
rustronomy-watershed = {version = "0.3.2", features = ["jemalloc", "plots"] }
ndarray = {version="0.15", features=["rayon"]}